@@ -1,6 +1,7 @@
 * Fixed bug about the options window being always opened as a modal dialog.
 * Updated homepage link.
 * Updated help.
+* If the help tab is already open, it is shown instead of opening a new one.
 
 v0.17.0 (2015-09-19)
 * Asynchronous input/output.
